ENHANCED: Updated PceDraw
  - Use native file dialog for save, load and export
  - Remove windows metafile support
  - Replace Postscript output with PDF
  - Disable printing.   Not supported by SDL and not very important.

--- a/prolog/lib/draw/README
+++ b/prolog/lib/draw/README
@@ -5,7 +5,7 @@ Author:		Jan Wielemaker
 		University of Amsterdam
 		Roetersstraat 15
 		1018 WB  Amsterdam
-		E-mail: jan@swi.psy.uva.nl
+		E-mail: jan@swi-prolog.org
 
 Status:		Under development
 
